--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,13 @@
 include MANIFEST.in
 include LICENCE.txt
 include README.rst
+
 recursive-include icomoon/templates *
-recursive-include icomoon/locale *
 recursive-include icomoon/static *
+recursive-include icomoon/locale *
+recursive-include icomoon/test_fixtures *
+
+recursive-exclude project_test *
+recursive-exclude project_test .cache
+recursive-exclude project_test __pycache__
+recursive-exclude project_test *.pyc
