--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 
 [tox]
-envlist = py{27,35}-django{18,19,110,111},
+envlist = py{27}-django{18},
 
 [testenv]
 # changedir = project_test
@@ -13,4 +13,4 @@ deps =
 
 commands =
     pip install -r requirements/tests.txt
-    py.test -vv project_test/tests
+    py.test -vv project_test/
