* Fix Sass template for bad selector, close #10; * Cleaned icon gallery template; * Dropped support for Django <= 1.8; * Better Makefile for development install; * Bump to 1.2.0;

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,11 @@
-#buildout's specific
-.installed.cfg
-eggs/*
-bin/*
-build/*
-dist/*
+# virtualenv
+/venv
 
 #egg's specific
 *.egg-info
 
 #defaults
+/dist
 *.pyc
 *.pyo
 
@@ -16,4 +13,8 @@ dist/*
 .tox
 .cache
 __pycache__
+
+#django
 project_test/db.sqlite3
+project_test/project/settings/local.py
+project_test/project/static
