[1.4.0] Project and package refactoring
* Drop 'six' usage;
* Drop 'django-braces' usage;
* Migrate to 'setup.cfg' for package configuration;
* Cover every supported Django versions with tox;
* Updated demo project with sandbox;
* Add documentation on ReadTheDoc;
* Update 'icon_map.scss' template to include a Sass map for available
  icons, close #11;

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,40 @@
 # virtualenv
-/venv
+.venv
 
-#egg's specific
+# Packaging
+build
+dist
 *.egg-info
 
-#defaults
-/dist
-*.pyc
-*.pyo
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
 
-#tests
-.tox
+# Unit test / coverage reports
+htmlcov/
+.coverage
 .cache
-__pycache__
+.pytest_cache
+nosetests.xml
+coverage.xml
+.tox
 
-#django
-project_test/db.sqlite3
-project_test/project/settings/local.py
-project_test/project/static
+# Site media and builded statics
+/data/
+/sandbox/static
+
+# VS Code
+.vscode
+
+# Mac Os
+.DS_Store
+
+# Temp files
+*~
+.~lock*
+
+# Swap files
+*.sw[po]
+
+# Logging files
+*.log
