[1.4.1] Release to fix issue with setuptools>=59

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,8 @@
 ;;
 [metadata]
 name = django-icomoon
-version = 1.4.0
-description = A Django app to deploy wefonts from Icomoon and display them
+version = 1.4.1
+description = A Django app to deploy wefonts from Icomoon and display them.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
 author = David Thenon
