--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-icomoon
-version = 1.4.1
+version = 1.4.2
 description = A Django app to deploy wefonts from Icomoon and display them.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -20,12 +20,14 @@ classifiers =
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
     Framework :: Django
     Framework :: Django :: 2.0
     Framework :: Django :: 2.1
     Framework :: Django :: 2.2
     Framework :: Django :: 3.0
     Framework :: Django :: 3.1
+    Framework :: Django :: 3.2
     Intended Audience :: Developers
     Topic :: Internet :: WWW/HTTP
     Topic :: Software Development :: Libraries :: Python Modules
@@ -34,6 +36,7 @@ classifiers =
 include_package_data = True
 install_requires =
     Django>=2.0
+    setuptools<81.0.0
 packages = find:
 zip_safe = True
 
@@ -46,6 +49,8 @@ dev =
     sphinx-rtd-theme
     livereload
     twine
+quality =
+    tox
 
 [options.packages.find]
 where = .
@@ -80,7 +85,7 @@ testpaths =
 
 [tox:tox]
 minversion = 3.4.0
-envlist = py{36}-django{200,210,220,300,310},
+envlist = py{37}-django{200,312},
 
 [testenv]
 
@@ -90,6 +95,7 @@ deps =
     django220: Django>=2.2,<3.0
     django300: Django>=3.0,<3.1
     django310: Django>=3.1,<3.2
+    django312: Django>=3.2,<4.0
 
 commands =
     pip install -e .[dev]
