--- a/setup.cfg
+++ b/setup.cfg
@@ -1,56 +1,62 @@
 ;;
-;; django-icomoon package
+;; Django Icomoon package
 ;;
 [metadata]
 name = django-icomoon
-version = 1.4.2
-description = A Django app to deploy wefonts from Icomoon and display them.
+version = 1.5.0-pre.0
+description = A Django app to deploy webfonts from Icomoon and display them
 long_description = file:README.rst
 long_description_content_type = text/x-rst
 author = David Thenon
 author_email = sveetch@gmail.com
 url = https://github.com/sveetch/django-icomoon
+project_urls =
+    Source Code = https://github.com/sveetch/django-icomoon
+    Issue Tracker = https://github.com/sveetch/django-icomoon/issues
+    Changelog = https://django-icomoon.readthedocs.io/en/latest/history.html
+    Documentation = https://django-icomoon.readthedocs.io/
 license = MIT
-keywords = Django, Icomoon, CSS, Font
+keywords = Django,Icomoon,CSS,Font
 classifiers =
-    License :: OSI Approved :: MIT License
-    Operating System :: OS Independent
     Development Status :: 5 - Production/Stable
-    Environment :: Web Environment
-    Programming Language :: Python
-    Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.6
-    Programming Language :: Python :: 3.7
-    Framework :: Django
-    Framework :: Django :: 2.0
-    Framework :: Django :: 2.1
-    Framework :: Django :: 2.2
-    Framework :: Django :: 3.0
-    Framework :: Django :: 3.1
-    Framework :: Django :: 3.2
     Intended Audience :: Developers
-    Topic :: Internet :: WWW/HTTP
-    Topic :: Software Development :: Libraries :: Python Modules
+    License :: OSI Approved :: MIT License
+    Natural Language :: English
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Framework :: Django
+    Framework :: Django :: 3.2
+    Framework :: Django :: 4.0
+    Framework :: Django :: 4.1
+    Framework :: Django :: 4.2
 
 [options]
+python_requires = >=3.9
 include_package_data = True
 install_requires =
-    Django>=2.0
-    setuptools<81.0.0
+    Django>=3.2,<4.0
 packages = find:
 zip_safe = True
 
 [options.extras_require]
 dev =
-    flake8
-    pytest
-    pytest-django
-    sphinx
-    sphinx-rtd-theme
-    livereload
-    twine
+    pytest>=7.0.0
+    pytest-django>=4.0.0
+    factory-boy>=3.3.0
+    pyquery>=2.0.0
+    freezegun>=1.2.0
 quality =
-    tox
+    flake8>=6.0.0
+    tox>=4.11.0
+doc =
+    sphinx
+    furo
+    sphinx-copybutton
+doc-live =
+    livereload
+release =
+    twine>=5.0.0
 
 [options.packages.find]
 where = .
@@ -61,7 +67,7 @@ exclude=
     sandbox
 
 [wheel]
-universal = 1
+universal = 0
 
 ;;
 ;; Third-party packages configuration
@@ -72,12 +78,12 @@ exclude =
     .git,
     .venv,
     build,
-    __pycache__,
+    __pycache__
     */migrations/*
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = sandbox.settings.tests
-addopts = -vv
+addopts = -v --tb=long
 python_files =
     *.py
 testpaths =
@@ -85,17 +91,19 @@ testpaths =
 
 [tox:tox]
 minversion = 3.4.0
-envlist = py{37}-django{200,312},
+envlist =
+    py{39}-django{32}
+    py{39}-django{42}
 
 [testenv]
 
 deps =
-    django200: Django>=2.0,<2.1
-    django210: Django>=2.1,<2.2
-    django220: Django>=2.2,<3.0
-    django300: Django>=3.0,<3.1
-    django310: Django>=3.1,<3.2
-    django312: Django>=3.2,<4.0
+    django32: Django>=3.2,<4.0
+    django42: Django>=4.2,<5.0
+    django50: Django>=5.0,<5.1
+    django51: Django>=5.1,<5.2
+    django52: Django>=5.2,<6.0
+    django60: Django>=6.0,<6.1
 
 commands =
     pip install -e .[dev]
