[CHG] Fixed install and added support for Python>=3.8 and Django>=3.2

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-icomoon
-version = 1.5.0-pre.1
+version = 1.5.0-pre.2
 description = A Django app to deploy webfonts from Icomoon and display them
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -23,19 +23,27 @@ classifiers =
     License :: OSI Approved :: MIT License
     Natural Language :: English
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
     Framework :: Django
     Framework :: Django :: 3.2
     Framework :: Django :: 4.0
     Framework :: Django :: 4.1
     Framework :: Django :: 4.2
+    Framework :: Django :: 5.0
+    Framework :: Django :: 5.1
+    Framework :: Django :: 5.2
+    Framework :: Django :: 6.0
 
 [options]
-python_requires = >=3.9
+python_requires = >=3.8
 include_package_data = True
 install_requires =
-    Django>=3.2,<4.0
+    Django>=3.2
 packages = find:
 zip_safe = True
 
@@ -50,11 +58,11 @@ quality =
     flake8>=6.0.0
     tox>=4.11.0
 doc =
-    sphinx
-    furo
-    sphinx-copybutton
+    sphinx>=8.0.2
+    furo>=2024.8.6
+    sphinx-copybutton>=0.5.2
 doc-live =
-    livereload
+    livereload>=2.6.0
 release =
     twine>=5.0.0
 
@@ -94,6 +102,9 @@ minversion = 3.4.0
 envlist =
     py{38}-django{32}
     py{39}-django{32}
+    py{310}-django{42}
+    py{311}-django{52}
+    py{313}-django{60}
 
 [testenv]
 
